# SecondAID

./: .gitignore  CMakeLists.txt  README.md  build_release_bundles.sh
include/: AIDPacket.hpp  AnsiColours.hpp  BinaryStream.hpp  Callbacks.hpp  Events.hpp  MultiplatformNet.hpp  SecondAid.hpp  SecondAidHLAPI.hpp
src/: DefaultLayout.hpp  main.cpp
src/tools/: AsyncLuaLinter.hpp  GlobalsManager.hpp  LuaLinter.hpp  ScriptAPI.hpp  ScriptEditorAutocomplete.hpp
src/widgets/: BreakpointsWindow.hpp  ConnectionWindow.hpp  ConsoleWindow.hpp  DebuggerPanel.hpp  LogWindow.hpp  LuaErrorWindow.hpp  ScriptEditorWindow.hpp  ScriptExplorer.hpp  StaticAnalysisOverview.hpp  StaticAnalysisWindow.hpp  WatchesWindow.hpp
